--- a/environment.ipynb
+++ b/environment.ipynb
@@ -6,18 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyboard_low = [[ '`', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', '<back>'],\n",
-    "                [ '\\t', 'q', 'w', 'e', 'r', 't', 'y', 'u', 'i', 'o', 'p', '[', ']', \"\\\\\"],\n",
-    "                ['<caps>','a', 's', 'd', 'f', 'g', 'h', 'j', 'k', 'l', ';', \"'\", '\\n'],\n",
-    "                ['<shift>','z', 'x', 'c', 'v', 'b', 'n', 'm', ',', '.', '/', '<shift>'],\n",
-    "                ['<win>', '<alt>', ' ', ' ', ' ', ' ', ' ', ' ', '<alt>', '<fn>']]\n",
+    "keyboard_low = [\n",
+    "    [\"`\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"0\", \"-\", \"=\", \"<back>\"],\n",
+    "    [\"\\t\", \"q\", \"w\", \"e\", \"r\", \"t\", \"y\", \"u\", \"i\", \"o\", \"p\", \"[\", \"]\", \"\\\\\"],\n",
+    "    [\"<caps>\", \"a\", \"s\", \"d\", \"f\", \"g\", \"h\", \"j\", \"k\", \"l\", \";\", \"'\", \"\\n\"],\n",
+    "    [\"<shift>\", \"z\", \"x\", \"c\", \"v\", \"b\", \"n\", \"m\", \",\", \".\", \"/\", \"<shift>\"],\n",
+    "    [\"<win>\", \"<alt>\", \" \", \" \", \" \", \" \", \" \", \" \", \"<alt>\", \"<fn>\"],\n",
+    "]\n",
     "\n",
-    "keyboard_high = [[ '~', '!', '@', '#', '$', '%', '^', '&', '*', '(', ')', '_', '+', '<back>'],\n",
-    "                 [ '\\t', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '{', '}', \"|\"],\n",
-    "                 ['<caps>','A','S','D','F','G','H', 'J', 'K', 'L', ':', '\"', '\\n'],\n",
-    "                 ['<shift>','Z', 'X', 'C', 'V', 'B', 'N', 'M', '<', '>', '?', '<shift>',],\n",
-    "                 ['<win>', '<alt>',' ', ' ', ' ', ' ', ' ', ' ', '<alt>', '<fn>' ]]\n",
-    "                "
+    "keyboard_high = [\n",
+    "    [\"~\", \"!\", \"@\", \"#\", \"$\", \"%\", \"^\", \"&\", \"*\", \"(\", \")\", \"_\", \"+\", \"<back>\"],\n",
+    "    [\"\\t\", \"Q\", \"W\", \"E\", \"R\", \"T\", \"Y\", \"U\", \"I\", \"O\", \"P\", \"{\", \"}\", \"|\"],\n",
+    "    [\"<caps>\", \"A\", \"S\", \"D\", \"F\", \"G\", \"H\", \"J\", \"K\", \"L\", \":\", '\"', \"\\n\"],\n",
+    "    [\n",
+    "        \"<shift>\",\n",
+    "        \"Z\",\n",
+    "        \"X\",\n",
+    "        \"C\",\n",
+    "        \"V\",\n",
+    "        \"B\",\n",
+    "        \"N\",\n",
+    "        \"M\",\n",
+    "        \"<\",\n",
+    "        \">\",\n",
+    "        \"?\",\n",
+    "        \"<shift>\",\n",
+    "    ],\n",
+    "    [\"<win>\", \"<alt>\", \" \", \" \", \" \", \" \", \" \", \" \", \"<alt>\", \"<fn>\"],\n",
+    "]"
    ]
   },
   {
@@ -58,8 +74,9 @@
     "                high_dict[key] = [[i, j]]\n",
     "    return low_dict, high_dict\n",
     "\n",
-    "low_dict, high_dict =generate_dict(keyboard_low, keyboard_high)\n",
-    "low_dict['a']"
+    "\n",
+    "low_dict, high_dict = generate_dict(keyboard_low, keyboard_high)\n",
+    "low_dict[\"a\"]"
    ]
   },
   {
@@ -79,7 +96,7 @@
     }
    ],
    "source": [
-    "low_dict['<shift>']"
+    "low_dict[\"<shift>\"]"
    ]
   },
   {
@@ -112,9 +129,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt\n",
-    "import numpy as np\n",
     "from copy import deepcopy\n",
+    "from math import sqrt\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "class finger:\n",
     "    def __init__(self, default, name) -> None:\n",
@@ -144,22 +163,23 @@
     "        x1, y1 = self.current\n",
     "        x2, y2 = target\n",
     "        offset = 0\n",
-    "        if abs(y1-y2) > 3:\n",
+    "        if abs(y1 - y2) > 3:\n",
     "            offset = 1\n",
-    "        return sqrt(abs(x1-x2)**2 + abs((y1-y2)*1.2)**2+offset)\n",
-    "    \n",
+    "        return sqrt(abs(x1 - x2) ** 2 + abs((y1 - y2) * 1.2) ** 2 + offset)\n",
+    "\n",
     "    def reset(self):\n",
     "        self.current = self.default\n",
     "        self.typed_keys = 0\n",
     "        self.counter = 0\n",
-    "    \n",
-    "    def print_stat(self):\n",
-    "        print(f\"Name: {self.name}\\t\\t Typed keys: {self.typed_keys}\\t Current counter: {self.counter}\\t Current position: {self.current}\\t Default position: {self.default}\")\n",
     "\n",
+    "    def print_stat(self):\n",
+    "        print(\n",
+    "            f\"Name: {self.name}\\t\\t Typed keys: {self.typed_keys}\\t Current counter: {self.counter}\\t Current position: {self.current}\\t Default position: {self.default}\"\n",
+    "        )\n",
     "\n",
     "\n",
     "class keyboard:\n",
-    "    def __init__(self, keyboard_low, keyboard_high, low_dict, high_dict, show = False):\n",
+    "    def __init__(self, keyboard_low, keyboard_high, low_dict, high_dict, show=False):\n",
     "        self.keyboard_low = deepcopy(keyboard_low)\n",
     "        self.keyboard_high = deepcopy(keyboard_high)\n",
     "        self.low_dict = deepcopy(low_dict)\n",
@@ -179,7 +199,7 @@
     "        self.fingers.extend([f0, f1, f2, f3, f4, f5, f6, f7, f8, f9])\n",
     "        self.total_distance = 0\n",
     "\n",
-    "    def move_one_finger(self, cells, banned = -1):\n",
+    "    def move_one_finger(self, cells, banned=-1):\n",
     "        best_finger_id = 0\n",
     "        best_distance = 99999\n",
     "        final_cell = [0, 0]\n",
@@ -199,17 +219,18 @@
     "        return best_finger_id, final_cell, best_distance\n",
     "\n",
     "    def move_two_fingers(self, cells):\n",
-    "\n",
     "        distance = 0\n",
     "\n",
-    "        f1_shift, c1_shift, d1_shift = self.move_one_finger(self.low_dict['<shift>'])\n",
+    "        f1_shift, c1_shift, d1_shift = self.move_one_finger(self.low_dict[\"<shift>\"])\n",
     "        f1_key, c1_key, d1_key = self.move_one_finger(cells, banned=f1_shift)\n",
     "\n",
     "        f2_key, c2_key, d2_key = self.move_one_finger(cells)\n",
-    "        f2_shift, c2_shift, d2_shift = self.move_one_finger(self.low_dict['<shift>'], f2_key)\n",
+    "        f2_shift, c2_shift, d2_shift = self.move_one_finger(\n",
+    "            self.low_dict[\"<shift>\"], f2_key\n",
+    "        )\n",
     "\n",
     "        if d1_shift + d1_key < d2_key + d2_shift:\n",
-    "            distance = d1_shift + d1_key \n",
+    "            distance = d1_shift + d1_key\n",
     "            return f1_shift, f1_key, c1_shift, c1_key, distance\n",
     "        else:\n",
     "            distance = d2_key + d2_shift\n",
@@ -218,30 +239,36 @@
     "    def end_move(self):\n",
     "        for finger in self.fingers:\n",
     "            self.total_distance += finger.tick()\n",
-    "    \n",
+    "\n",
     "    def find_key(self, key):\n",
     "        if key in self.low_dict:\n",
-    "            finger_id, cell, distance = self.move_one_finger(self.low_dict[key], self.fingers)\n",
+    "            finger_id, cell, distance = self.move_one_finger(\n",
+    "                self.low_dict[key], self.fingers\n",
+    "            )\n",
     "            self.fingers[finger_id].move_to(cell)\n",
     "            self.total_distance += distance\n",
     "            if self.show:\n",
-    "                print(key + ': ' + self.fingers[finger_id].name)\n",
+    "                print(key + \": \" + self.fingers[finger_id].name)\n",
     "        elif key in self.high_dict:\n",
-    "            f1_id, f2_id, f1_cell, f2_cell, distance = self.move_two_fingers(self.high_dict[key])\n",
+    "            f1_id, f2_id, f1_cell, f2_cell, distance = self.move_two_fingers(\n",
+    "                self.high_dict[key]\n",
+    "            )\n",
     "            self.fingers[f1_id].move_to(f1_cell)\n",
     "            self.fingers[f2_id].move_to(f2_cell)\n",
     "            self.total_distance += distance\n",
     "            if self.show:\n",
-    "                print(key + ': ' + self.fingers[f1_id].name + \"+\" + self.fingers[f2_id].name)\n",
+    "                print(\n",
+    "                    key + \": \" + self.fingers[f1_id].name + \"+\" + self.fingers[f2_id].name\n",
+    "                )\n",
     "        else:\n",
     "            print(\"THERE IS NO SUCH KEY: \", key)\n",
     "        self.end_move()\n",
-    "    \n",
+    "\n",
     "    def type_string(self, str):\n",
     "        for letter in str:\n",
     "            self.find_key(letter)\n",
     "        return self.total_distance\n",
-    "    \n",
+    "\n",
     "    def swap_cells_low(self, cell1, cell2):\n",
     "        x1, y1 = cell1\n",
     "        key1 = self.keyboard_low[x1][y1]\n",
@@ -282,7 +309,7 @@
     "            self.low_dict[key_high].append(cell_low)\n",
     "        else:\n",
     "            self.low_dict[key_high] = [cell_low]\n",
-    "        \n",
+    "\n",
     "        if key_low in self.high_dict:\n",
     "            self.high_dict[key_low].append(cell_high)\n",
     "        else:\n",
@@ -295,10 +322,10 @@
     "        self.total_distance = 0\n",
     "        for f in self.fingers:\n",
     "            f.reset()\n",
-    "    \n",
+    "\n",
     "    def show_fingers_stat(self):\n",
     "        for f in self.fingers:\n",
-    "            f.print_stat()\n"
+    "            f.print_stat()"
    ]
   },
   {
@@ -314,13 +341,13 @@
     "    keyboard_shape.append(len(keyboard_low[i]))\n",
     "    for j in range(len(keyboard_low[i])):\n",
     "        key = keyboard_high[i][j]\n",
-    "        if key != '<shift>':\n",
+    "        if key != \"<shift>\":\n",
     "            all_keys.append(key)\n",
     "\n",
     "for i in range(len(keyboard_high)):\n",
     "    for j in range(len(keyboard_high[i])):\n",
     "        key = keyboard_high[i][j]\n",
-    "        if key != '<shift>':\n",
+    "        if key != \"<shift>\":\n",
     "            all_keys.append(key)"
    ]
   },
@@ -374,40 +401,42 @@
     }
    ],
    "source": [
-    "import random \n",
+    "import random\n",
+    "\n",
     "\n",
     "def generate_cell(keyboard_shape):\n",
-    "    x = random.randint(0, len(keyboard_shape)-1)\n",
-    "    y = random.randint(0, keyboard_shape[x]-1)\n",
+    "    x = random.randint(0, len(keyboard_shape) - 1)\n",
+    "    y = random.randint(0, keyboard_shape[x] - 1)\n",
     "    return x, y\n",
     "\n",
+    "\n",
     "def generate_layout(all_keys, keyboard_shape):\n",
-    "    low = [[0 for _ in range(row)] for row in keyboard_shape] \n",
-    "    high = [[0 for _ in range(row)] for row in keyboard_shape] \n",
+    "    low = [[0 for _ in range(row)] for row in keyboard_shape]\n",
+    "    high = [[0 for _ in range(row)] for row in keyboard_shape]\n",
     "    x1, y1 = generate_cell(keyboard_shape)\n",
     "    x2, y2 = x1, y1\n",
     "    while x1 == x2 and y1 == y2:\n",
     "        x2, y2 = generate_cell(keyboard_shape)\n",
-    "    low[x1][y1] = '<shift>'\n",
-    "    high[x1][y1] = '<shift>'\n",
-    "    low[x2][y2] = '<shift>'\n",
-    "    high[x2][y2] = '<shift>'\n",
-    "    \n",
+    "    low[x1][y1] = \"<shift>\"\n",
+    "    high[x1][y1] = \"<shift>\"\n",
+    "    low[x2][y2] = \"<shift>\"\n",
+    "    high[x2][y2] = \"<shift>\"\n",
+    "\n",
     "    temp = deepcopy(all_keys)\n",
     "    random.shuffle(temp)\n",
-    "    \n",
+    "\n",
     "    for i in range(len(low)):\n",
     "        for j in range(len(low[i])):\n",
     "            key = low[i][j]\n",
-    "            if key == '<shift>':\n",
+    "            if key == \"<shift>\":\n",
     "                continue\n",
     "            key = temp.pop()\n",
     "            low[i][j] = key\n",
-    "    \n",
+    "\n",
     "    for i in range(len(high)):\n",
     "        for j in range(len(high[i])):\n",
     "            key = high[i][j]\n",
-    "            if key == '<shift>':\n",
+    "            if key == \"<shift>\":\n",
     "                continue\n",
     "            key = temp.pop()\n",
     "            high[i][j] = key\n",
@@ -476,7 +505,7 @@
    ],
    "source": [
     "k = keyboard(keyboard_low, keyboard_high, low_dict, high_dict, show=True)\n",
-    "k.low_dict['s'], k.low_dict['q'], k.high_dict['S'], k.high_dict['Q']"
+    "k.low_dict[\"s\"], k.low_dict[\"q\"], k.high_dict[\"S\"], k.high_dict[\"Q\"]"
    ]
   },
   {
@@ -506,7 +535,7 @@
     }
    ],
    "source": [
-    "k.low_dict['s'], k.low_dict['q'], k.high_dict['S'], k.high_dict['Q']"
+    "k.low_dict[\"s\"], k.low_dict[\"q\"], k.high_dict[\"S\"], k.high_dict[\"Q\"]"
    ]
   },
   {
@@ -574,7 +603,7 @@
     }
    ],
    "source": [
-    "k.low_dict['w'], k.high_dict['E']"
+    "k.low_dict[\"w\"], k.high_dict[\"E\"]"
    ]
   },
   {
@@ -643,7 +672,12 @@
     }
    ],
    "source": [
-    "k.low_dict['w'], k.high_dict['E'], k.high_dict['w'], k.low_dict['E'], "
+    "(\n",
+    "    k.low_dict[\"w\"],\n",
+    "    k.high_dict[\"E\"],\n",
+    "    k.high_dict[\"w\"],\n",
+    "    k.low_dict[\"E\"],\n",
+    ")"
    ]
   },
   {
@@ -714,7 +748,7 @@
     }
    ],
    "source": [
-    "k.type_string('Hi my name is Seva!')"
+    "k.type_string(\"Hi my name is Seva!\")"
    ]
   },
   {
@@ -805,9 +839,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"./validated/200717.cpp.csv\", sep='`')\n",
-    "temp = df['code']\n",
-    "len(temp)\n"
+    "df = pd.read_csv(\"./validated/200717.cpp.csv\", sep=\"`\")\n",
+    "temp = df[\"code\"]\n",
+    "len(temp)"
    ]
   },
   {
@@ -816,7 +850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_sent = '\\n'.join(temp)"
+    "temp_sent = \"\\n\".join(temp)"
    ]
   },
   {
@@ -905,15 +939,17 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "from tqdm import tqdm\n",
+    "\n",
     "count = 0\n",
     "directory = \"./validated\"\n",
     "sentences = []\n",
     "for filename in tqdm(os.listdir(directory)):\n",
     "    f = os.path.join(directory, filename)\n",
-    "    df = pd.read_csv(f, sep='`')\n",
-    "    temp = df['code']\n",
-    "    temp_sent = '\\n'.join(temp)\n",
+    "    df = pd.read_csv(f, sep=\"`\")\n",
+    "    temp = df[\"code\"]\n",
+    "    temp_sent = \"\\n\".join(temp)\n",
     "    sentences.append(temp_sent)\n",
     "    count += 1"
    ]
@@ -997,7 +1033,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpp_programs.columns = ['text']"
+    "cpp_programs.columns = [\"text\"]"
    ]
   },
   {
