Fix [code style] notebooks/Generator

--- a/notebooks/ActorCritic.ipynb
+++ b/notebooks/ActorCritic.ipynb
@@ -1279,7 +1279,10 @@
     "    plt.ylabel(\"Score\")\n",
     "    plt.xlabel(\"Episode\")\n",
     "    plt.title(\"Scores for each episode\")\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "plot_scores(scores)"
    ]
   }
  ],
