Solve problem with generated dictionaries

--- a/notebooks/generator.ipynb
+++ b/notebooks/generator.ipynb
@@ -277,7 +277,7 @@
     "    encode_value = len(letters_dict) + 1\n",
     "    encode_dict = {}\n",
     "    decode_dict = {}\n",
-    "    for btn in buttons:\n",
+    "    for btn in sorted(buttons):\n",
     "        if btn in letters_dict:\n",
     "            decode_dict[letters_dict[btn]] = btn\n",
     "            encode_dict[btn] = letters_dict[btn]\n",
@@ -1332,8 +1332,9 @@
     "    plt.legend()\n",
     "    plt.grid()\n",
     "    if x_lim is None:\n",
-    "        x_lim = len(random_scores)\n",
+    "        x_lim = len(random_scores) - 1\n",
     "    plt.xlim([0, x_lim])\n",
+    "    plt.xticks(points)\n",
     "    plt.ylabel(\"Score\")\n",
     "    plt.xlabel(\"Random layout #\")\n",
     "    plt.title(\"Scores for random layouts\")\n",
